# laser_pipeline_gui

./: .gitignore  README.md  context_gpt.md  contexte_gpt.md  gui_main.py  pyproject.toml
.github/: copilot-instructions.md
core/: bitmap_convert.py  config.py  ffmpeg_extract.py  ilda_export.py  ilda_preview.py  ilda_profiles.py  ilda_writer.py  potrace_vectorize.py  step_bitmap.py  step_ffmpeg.py  step_ilda.py  step_potrace.py
core/pipeline/: arcade_lines_step.py  base.py  bitmap_step.py  ffmpeg_step.py  full_pipeline_step.py  ilda_step.py  potrace_step.py
docs/: AGENTS.md  GUI_VALIATION.md  GUI_VALIDATION.md  STATE_ARCADE_V2.md
gui/: main_window.py  pipeline_controller.py  preview_widgets.py
gui/models/: __init__.py  pipeline_settings.py
gui/services/: pipeline_service.py  preview_service.py  project_service.py  settings_service.py  suggestion_models.py  suggestion_service.py
gui/ui/: main_window.py  menu.py
gui/ui/controllers/: __init__.py  pipeline_settings_mapper.py  pipeline_ui_actions.py  pipeline_ui_controller.py  preview_controller.py  project_controller.py  settings_io.py
gui/ui/panels/: general_panel.py  pipeline_panel.py
tests/: test_ilda_minimal.py  test_ilda_square.py  test_ilda_square_v2.py  test_shapes.ild
